<resources>
    <string name="app_name">TestTrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or login</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="facebook_app_id" translatable="false">448843619255434</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb448843619255434</string>
    <string name="prompt_login_email">Email</string>
    <string name="prompt_login_password">Password</string>
    <string name="prompt_signup_email">Email</string>
    <string name="prompt_signup_password">Password</string>
    <string name="prompt_signup_password2">Password (verify)</string>
    <string name="action_find_id">Find ID</string>
    <string name="action_find_password">Find Password</string>
    <string name="action_google_login">Google Login</string>
    <string name="action_facebook_login">Facebook Login</string>
    <string name="action_create_account">Create Account</string>
    <string name="login_hello_start">"Hi, "</string>
    <string name="login_hello_end">.</string>
    <string name="error_login_failed">Login Failed.</string>
    <string name="authentication_success">Authentication Success</string>
    <string name="authentication_failed">Authenticationi Failed</string>
    <string name="create_user_success">Create User Success</string>
    <string name="create_user_failed">Create User Failed</string>
    <string name="verification_email_sent">"verification email sent to "</string>
    <string name="verification_email_sent_failed">Failed to send verification email.</string>
    <string name="prompt_signup_name">Name (optional)</string>
    <string name="logout_success">You have been logged out</string>
    <string name="logout_failed">Logout failed</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="speed">speed</string>
    <string name="address">address</string>
    <string name="error_unregistered_email">There is no email record corresponding to this identifier</string>
    <string name="error_many_request_failed">Too many unsuccessful login attempts. Please try again later</string>
    <string name="error_password_not_match">Password does not match</string>
    <string name="check_verification_email">Please check the verification email.</string>
    <string name="error_already_used_email">The email address is already in use by another account</string>
    <string name="tracking_location">Real-time Location</string>
    <string name="bottom_general">General</string>
    <string name="bottom_contents">Contents</string>
    <string name="bottom_service">Service</string>
    <string name="bottom_user">User</string>
    <string name="bottom_Information">Information</string>
    <string name="item_select">Select</string>
    <string name="tab_my">MY</string>
    <string name="tab_contents">STORE</string>
    <string name="tab_published">PUBLISHED</string>
    <string name="title_activity_bottom">Information</string>
    <string name="title_activity_itemdetail">Item Detail</string>
    <string name="title_activity_itemlist">Item List</string>
    <string name="title_activity_tabbed">Contents List</string>
    <string name="not_yet_implemented">This function is not implemented yet.</string>
    <string name="not_yet_login">You haven\'t signed in yet.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="Hello">Hey, buddy.</string>
    <string name="service_not_available">The background geocoding service is not available due to a network error or IO exception.</string>
    <string name="invalid_lat_long_used">The latitude and/or longitude values that are provided in the Location object are invalid.</string>
    <string name="no_address_found">The geocoder cannot find an address for the given latitude/longitude.</string>
    <string name="address_found">The geocoder found an address.</string>
</resources>
